fix(sign-in): fix password visibility button color
Fix `bio-sign-in` password visibility `aria-pressed` `mat-icon-button`
`color`.

--- a/frontend/src/styles/overrides/_mat-button.sass
+++ b/frontend/src/styles/overrides/_mat-button.sass
@@ -103,11 +103,14 @@
   &.mat-warn
     color: $green
 
-  &.mat-unthemed[aria-pressed="true"]
-    color: $light-green
+  &[aria-pressed="true"]
 
-  &.mat-primary[aria-pressed="true"]
-    color: $green
+    &.mat-unthemed,
+    &.mat-accent
+      color: $light-green
+
+    &.mat-primary
+      color: $green
 
   &:hover,
   &:active
